crates/cairn-lang-core/tests/snapshots/parse_examples__parses_roof_hip.snap
---
source: crates/cairn-lang-core/tests/parse_examples.rs
expression: module
---
headers:
  - kind: Cairn
    version: "2026.06"
  - kind: Requires
    requirement: version>=1.20
items:
  - kind: Theme
    name: pavilion
    body:
      - kind: Slot
        slot: floor
        value:
          kind: Token
          value: oak_planks
      - kind: Slot
        slot: wall
        value:
          kind: Token
          value: cobblestone
      - kind: Slot
        slot: roof
        value:
          kind: Token
          value: spruce_stairs
  - kind: Struct
    name: roof_hip
    args:
      - key: size
        value:
          kind: Size
          value:
            w: 5
            h: 5
    body:
      - kind: Generic
        keyword: floor
        args:
          - key: mat_slot
            value:
              kind: Ident
              value: floor
      - kind: Generic
        keyword: walls
        args:
          - key: mat_slot
            value:
              kind: Ident
              value: wall
          - key: height
            value:
              kind: Int
              value: 3
      - kind: Generic
        keyword: roof
        args:
          - key: kind
            value:
              kind: Ident
              value: hip
          - key: mat_slot
            value:
              kind: Ident
              value: roof
          - key: overhang
            value:
              kind: Int
              value: 1
